# cpp-unit-test-example

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: classify_triangle.h
src/: classify_triangle.cpp  example.cpp
test/: test_classifyTriangle.cpp
